[gd_scene load_steps=13 format=2]

[ext_resource path="res://Enemies/SlimeEnemy.gd" type="Script" id=1]
[ext_resource path="res://Sprites/SpriteSheetSlime.png" type="Texture" id=2]
[ext_resource path="res://UI/EnemyHealthBar.tscn" type="PackedScene" id=3]

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7, 6.5 )

[sub_resource type="Animation" id=9]
resource_name = "Flash"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 128.498, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="SlimeEnemy" type="KinematicBody2D"]
scale = Vector2( 2, 2 )
collision_layer = 2
collision_mask = 7
script = ExtResource( 1 )
speed = 4
hp = 5
attack_cd = 0.5

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 8 )
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -1 )
shape = SubResource( 1 )

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 0, -0.5 )
shape = SubResource( 1 )

[node name="WaitTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="EnemyHealthBar" parent="." instance=ExtResource( 3 )]
modulate = Color( 1, 1, 1, 0.862745 )
margin_left = -17.0
margin_top = -15.5
margin_right = 412.0
margin_bottom = 169.5
rect_scale = Vector2( 0.08, 0.08 )
max_value = 5.0
value = 5.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Flash = SubResource( 9 )

[connection signal="area_entered" from="Hitbox" to="." method="_on_CollisionArea_area_entered"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_CollisionArea_body_entered"]
[connection signal="body_exited" from="Hitbox" to="." method="_on_Hitbox_body_exited"]
[connection signal="timeout" from="WaitTimer" to="." method="_on_WaitTimer_timeout"]
